# gtk-vlc-player

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README  configure.ac
doc/: Doxyfile.in  Makefile.am
examples/: Makefile.am  simple.c
src/: Makefile.am  gtk-vlc-player.c  gtk-vlc-player.h
